# Platformer-C-SDL

./: Animation.cpp  Animation.h  Button.h  CMakeLists.txt  Camera.cpp  Camera.h  Character.h  Collider.h  CollisionHandler.cpp  CollisionHandler.h  Enemy.cpp  Enemy.h  Engine.cpp  Engine.h  GameMap.h  GameObject.h  Input.cpp  Input.h  Layer.h  MapParser.cpp  MapParser.h  Menu.cpp  Menu.h  Object.h  ObjectFactory.cpp  ObjectFactory.h  Platformer.txt  Point.h  README.md  RigidBody.h  Sound.cpp  Sound.h  TextOutput.h  TextureManager.cpp  TextureManager.h  TileLayer.cpp  TileLayer.h  Timer.cpp  Timer.h  Transform.h  (+4 more)
assets/maps/: map.tiled-session  map1.tmx  map2.tmx  map3.tmx
